Refactor database configuration to use a single connection string. Update environment variables in deployment workflow and configuration files accordingly.

--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-DB_HOST=contrateumprogramador.vps-kinghost.net
-DB_PORT=3306
-DB_USER=prevagro
-DB_PASS=prevagro
-DB_NAME=prevAgro
+DB_CONNECTION_STRING=prevagro:prevagro@tcp(contrateumprogramador.vps-kinghost.net:3306)/prevAgro?parseTime=true&loc=Local
