--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,6 +85,15 @@ jobs:
               --function-name ${{ env.FUNCTION_NAME }} \
               --zip-file fileb://function.zip \
               --region ${{ env.REGION }}
+            
+            # Aguardar e atualizar configuração
+            echo "⏳ Aguardando função ficar disponível..."
+            aws lambda wait function-updated --function-name ${{ env.FUNCTION_NAME }} --region ${{ env.REGION }}
+            
+            aws lambda update-function-configuration \
+              --function-name ${{ env.FUNCTION_NAME }} \
+              --environment Variables='{DB_CONNECTION_STRING=${{ secrets.DB_CONNECTION_STRING }}}' \
+              --region ${{ env.REGION }}
           else
             echo "🆕 Criando função Lambda..."
             aws lambda create-function \
@@ -97,14 +106,11 @@ jobs:
               --timeout 30 \
               --memory-size 512 \
               --environment Variables='{DB_CONNECTION_STRING=${{ secrets.DB_CONNECTION_STRING }}}'
+            
+            # Aguardar criação
+            echo "⏳ Aguardando função ser criada..."
+            aws lambda wait function-active --function-name ${{ env.FUNCTION_NAME }} --region ${{ env.REGION }}
           fi
-
-      - name: Update function configuration
-        run: |
-          aws lambda update-function-configuration \
-            --function-name ${{ env.FUNCTION_NAME }} \
-            --environment Variables='{DB_CONNECTION_STRING=${{ secrets.DB_CONNECTION_STRING }}}' \
-            --region ${{ env.REGION }}
 
       - name: Deploy API Gateway
         run: |
