chore: add OPEN_METEO_API_KEY to .env configuration

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB_CONNECTION_STRING=prevagro:prevagro@tcp(contrateumprogramador.vps-kinghost.net:3306)/prevAgro?parseTime=true&loc=Local
+OPEN_METEO_API_KEY=Iy7gvUmYUUQqMs2j
