--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,9 @@ name: Deploy to Lambda
 # - LAMBDA_ROLE_ARN
 # - DB_CONNECTION_STRING
 # - API_TOKEN
+# - DYNAMO_ACCESS_KEY
+# - DYNAMO_SECRET
+# - DYNAMODB_TABLE_NAME
 
 on:
   push:
@@ -89,7 +92,7 @@ jobs:
             echo "⚙️ Atualizando configuração..."
             aws lambda update-function-configuration \
               --function-name ${{ env.FUNCTION_NAME }} \
-              --environment Variables="{DB_CONNECTION_STRING=\"${{ secrets.DB_CONNECTION_STRING }}\",PORT=\"8080\",ENV=\"production\",API_TOKEN=\"${{ secrets.API_TOKEN }}\"}" \
+              --environment Variables="{DB_CONNECTION_STRING=\"${{ secrets.DB_CONNECTION_STRING }}\",PORT=\"8080\",ENV=\"production\",API_TOKEN=\"${{ secrets.API_TOKEN }}\",DYNAMO_ACCESS_KEY=\"${{ secrets.DYNAMO_ACCESS_KEY }}\",DYNAMO_SECRET=\"${{ secrets.DYNAMO_SECRET }}\",DYNAMODB_TABLE_NAME=\"${{ secrets.DYNAMODB_TABLE_NAME }}\",AWS_REGION=\"${{ env.REGION }}\"}" \
               --region ${{ env.REGION }}
           else
             echo "🆕 Criando função Lambda..."
@@ -102,7 +105,7 @@ jobs:
               --region ${{ env.REGION }} \
               --timeout 30 \
               --memory-size 512 \
-              --environment Variables="{DB_CONNECTION_STRING=\"${{ secrets.DB_CONNECTION_STRING }}\",PORT=\"8080\",ENV=\"production\",API_TOKEN=\"${{ secrets.API_TOKEN }}\"}"
+              --environment Variables="{DB_CONNECTION_STRING=\"${{ secrets.DB_CONNECTION_STRING }}\",PORT=\"8080\",ENV=\"production\",API_TOKEN=\"${{ secrets.API_TOKEN }}\",DYNAMO_ACCESS_KEY=\"${{ secrets.DYNAMO_ACCESS_KEY }}\",DYNAMO_SECRET=\"${{ secrets.DYNAMO_SECRET }}\",DYNAMODB_TABLE_NAME=\"${{ secrets.DYNAMODB_TABLE_NAME }}\",AWS_REGION=\"${{ env.REGION }}\"}"
             
             echo "⏳ Aguardando função ficar ativa..."
             aws lambda wait function-active \
