chore: update function name and DynamoDB table name in configuration
- Changed the FUNCTION_NAME from climia-api to climia-backend in the Makefile and deployment workflow.
- Updated the DynamoDB table name from weather-predictions to ClimIA-Previsoes in the configuration file for consistency with the new function name.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ on:
     branches: [main]
 
 env:
-  FUNCTION_NAME: climia-api
+  FUNCTION_NAME: climia-backend
   REGION: us-east-1
   API_NAME: ClimIA API
 
